[workspace]

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-coregraphics",
    "piet-direct2d",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

default-members = [
    "piet",
    "piet-common",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

[patch.crates-io]
font-kit = { path = "../font-kit" }
cairo-rs = { path = "../cairo" }
