[package]
name = "piet-cairo"
version = "0.2.0-pre5"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.2.0-pre5", path = "../piet" }

unicode-segmentation = "1.3.0"
xi-unicode = "0.2.0"
skribo = { git = "https://github.com/linebender/skribo" }
font-kit = "0.10.0"

[dependencies.cairo-rs]
version = "0.9.0"
git = "https://github.com/gtk-rs/cairo"
rev = "dd3cbdd07b046df9f1fc88ae3fe3ea998a92eaa1"
default-features = false # We don't need glib
features = ["freetype"]

[dev-dependencies]
piet = { version = "0.2.0-pre5", path = "../piet", features = ["samples"] }

[dev-dependencies.cairo-rs]
version = "0.9.0"
git = "https://github.com/gtk-rs/cairo"
rev = "dd3cbdd07b046df9f1fc88ae3fe3ea998a92eaa1"
default-features = false # We don't need glib
features = ["png"]

