[package]
name = "piet-cairo"
version = "0.2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "0.2.0", path = "../piet" }
unicode-segmentation = "1.3.0"
xi-unicode = "0.2.0"
freetype = "0.7.0"
font-kit = { git = "https://github.com/servo/font-kit", rev = "6cbe87e" }
log = "0.4.11"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs"
rev = "82017a5"
default-features = false
features = ["freetype"]

[dev-dependencies]
piet = { version = "0.2.0", path = "../piet", features = ["samples"] }

[dev-dependencies.cairo-rs]
git = "https://github.com/gtk-rs/gtk-rs"
rev = "82017a5"
default-features = false
features = ["png"]
