[package]
name = "piet-common"
version = "0.2.0-pre5"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Selection of a single preferred back-end for piet"
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d"]

[features]
d2d = ["piet-direct2d"]
cairo = ["piet-cairo", "cairo-rs", "font-kit"]
web = ["piet-web"]

[dependencies]
piet = { version = "0.2.0-pre5", path = "../piet" }
piet-cairo = { version = "0.2.0-pre5", path = "../piet-cairo", optional = true }
piet-coregraphics = { version = "0.2.0-pre5", path = "../piet-coregraphics", optional = true }
piet-direct2d = { version = "0.2.0-pre5", path = "../piet-direct2d", optional = true }
piet-web = { version = "0.2.0-pre5", path = "../piet-web", optional = true }

cfg-if = "0.1.10"
png = { version = "0.16.1", optional = true }
font-kit = { version = "0.10.0", optional = true }

[dependencies.cairo-rs]
version = "0.9.0"
optional = true
git = "https://github.com/gtk-rs/cairo"
rev = "dd3cbdd07b046df9f1fc88ae3fe3ea998a92eaa1"
default-features = false

[target.'cfg(target_os="linux")'.dependencies]
piet-cairo = { version = "0.2.0-pre5", path = "../piet-cairo" }
font-kit = "0.10.0"

[target.'cfg(target_os="linux")'.dependencies.cairo-rs]
version = "0.9.0"
git = "https://github.com/gtk-rs/cairo"
rev = "dd3cbdd07b046df9f1fc88ae3fe3ea998a92eaa1"
default-features = false

[target.'cfg(target_os="macos")'.dependencies]
piet-coregraphics = { version = "0.2.0-pre5", path = "../piet-coregraphics" }
core-graphics = { version = "0.22.0" }

[target.'cfg(target_os="windows")'.dependencies]
piet-direct2d = { version = "0.2.0-pre5", path = "../piet-direct2d" }

[target.'cfg(target_arch="wasm32")'.dependencies]
piet-web = { version = "0.2.0-pre5", path = "../piet-web" }
wasm-bindgen = "0.2.59"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.36"
features = ["console", "Window", "CanvasGradient", "CanvasRenderingContext2d", "CanvasWindingRule",
            "Document", "Element", "HtmlCanvasElement", "ImageBitmap", "ImageData", "TextMetrics"]

[dev-dependencies]
static_assertions = "1.1.0"
